fixed letter spacing and overflow; still to do: fix hero buttons, @media for big screens, clean code

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,400,500,900|Basic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,350,400,500,900|Basic');
 :root {
 /* TEXT    */
     font-family: 'Roboto', serif;
@@ -27,7 +27,7 @@ section {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    padding: 2.5%;
+    padding: 1.5%;
 }
 
 .vertical-block {
@@ -99,15 +99,15 @@ section {
 }
 
 .title-text {
-    /* letter-spacing: 1.5rem;
-    margin: 0 -1.5rem 0 0; */
+    letter-spacing: 0.5rem;
+    margin: 0 -0.5rem 0 0;
     color: var(--title-text-color);
 }
 
 .subtitle-text{
     font-weight: 200;
-    /* letter-spacing: 0.55rem;
-    margin: 0 -.55rem 0 0; */
+    letter-spacing: 0.225rem;
+    margin: 0 -.225rem 0 0; 
     color: var(--title-text-color);
 }
 
@@ -126,11 +126,13 @@ section {
 }
 
 h1 {
-    font-size: 4.5rem;   
+    font-size: 4.5rem;  
+    text-align: center; 
 }
 
 h2 {
     font-size: 1.85rem;
+    text-align: center;
 }
 
 h3 {
@@ -165,11 +167,14 @@ h5 {
 .hero-book3 { 
     width: var(--book-size-sm);
     min-width: 100px;
-    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.25); }
+    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.25); 
+}
 .hero-book1 { 
     width: var(--book-size-lg); 
     min-width: 105px;
-    box-shadow: 0rem 1.0rem 2rem rgba(0, 0, 0, 0.25); }
+    box-shadow: 0rem 1.0rem 2rem rgba(0, 0, 0, 0.25); 
+    justify-self: center;
+}
 
 .hero-book1,
 .hero-book2,
@@ -215,7 +220,6 @@ form{
 }
 
 /* BUTTONS*/
-
 .btn-hero {
     width: 150px;
     height: 35px;
@@ -225,6 +229,7 @@ form{
     border-radius: 1px;
     background-color: white;
     color: var(--button-color-main);
+    margin: 5% 0;
 }
 
 .btn-read {
@@ -236,7 +241,6 @@ form{
     border-radius: 1px;
     color: white;
 }
-
 
 .color-book1 {
     background-color: var(--button-color-book1);
@@ -301,26 +305,44 @@ form{
     grid-column: 5;
 }
 
+@media (max-height: 650px){
+    section {
+        height: 100%;
+    }
+    section * {
+        margin: 10px 0;
+    }
+}
+
+@media (min-height: 750px){
+    section {
+        height: 750px;
+    }
+    #first-section{
+        height: 100vh;
+    }
+}
 
 @media (max-width: 720px) {
     h1{
         width: 100%;
-        font-size: 3rem;
-        text-align: center;
+        font-size: 3.3rem;
     } 
     h2 {
         width: 100%;
-        font-size: 2rem;
-        text-align: center;
+        font-size: 1.3rem;
     }
     h3{
-        width: 100%;
+        width: 90%;
         font-size: 1.5rem;
         text-align: center;
     }
     section {
         height: 100%;
         margin-bottom: 50px;
+    }
+    .article-text{
+        width: 90%;
     }
     .vertical-block {
         flex-direction: column;
@@ -332,7 +354,6 @@ form{
         width: 100%;
     }
     .cover {
-        width: 200px;
         justify-self: center;
         align-self: center;
     }
@@ -344,13 +365,14 @@ form{
         text-align: center;
     }
     #biography {
-        width: 90%;
-    }
-    #btn-block {
-        display: flex;
-        flex-direction: row;
+        width: 81%;
+        padding: 5%;
     }
     
+    .horizontal-grid {
+        width: 100%;
+    }
+
     .hero-book2,
     .hero-book3{
         width: 180px;
@@ -360,10 +382,10 @@ form{
     }
 
     .hero-book2 { 
-        left  : calc(80px); 
+        left  : calc( (100vw - 200px) / 4) ; 
     }
     .hero-book3 { 
-        right : calc(80px); 
+        right : calc( (100vw - 200px) / 4) ;
     }
 }
 
@@ -372,12 +394,52 @@ form{
         width: 90%;
     }
     h1 {
-        font-size: 3rem;
+        font-size: 2.75rem;
+    }
+    h2 {
+        font-size: 1.075rem;
+        font-weight: 350;
     }
     h3 {
-        font-size: 1.5rem;
+        font-size: 1.35rem;
     }
-    .article-text{
-        width: 95%;
+    label {
+        font-size: 0.9rem;
     }
+
+    #btn-block {
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        flex-direction: column;
+    }
+    
+    a {
+        margin: 0px !important;
+    }
+
+.btn-submit{
+    margin-top: 0;
+    width: 175px;
 }
+
+}
+
+/* What is the minimum size we shoulld optimize for? */
+/* @media (max-width: 250px){}*/
+/* 
+- author name and ocupation container div bigger 
+- image size
+- form size
+*/
+
+
+/* #btn-block {
+    align-self: center;
+    justify-content: space-evenly;
+    width: 90%;
+}
+.btn-submit{
+margin-top: 0;
+width: 175px;
+} */
